Fix extra space at bottom of seven segments

--- a/src/SevenSegments.scss
+++ b/src/SevenSegments.scss
@@ -3,6 +3,8 @@
 }
 
 .seven-segment {
+    display: inline-block;
+    vertical-align: middle;
     width: 15px;
     height: 30px;
     margin: 0;
@@ -70,6 +72,5 @@
     display: inline-block;
     margin: 0;
     padding: 0;
-    height: 34px;
     background-color: black;
 }
